plugins {
    id 'java'
}

group = 'com.billwright'
version = '0.0.1-SNAPSHOT'

java {
    sourceCompatibility = JavaVersion.VERSION_25
    targetCompatibility = JavaVersion.VERSION_25
}

repositories {
    mavenCentral()
}

tasks.named('test') {
    useJUnitPlatform()
}

tasks.withType(JavaCompile).configureEach {
    options.compilerArgs += ["--enable-preview"]
}

tasks.withType(Test).configureEach {
    jvmArgs += ["--enable-preview"]
}

dependencies {
    // Strategy Interface Definition
    implementation files('libs/PolymorphiaStrategyModule-0.10.2.jar')
    implementation files('libs/PolymorphiaStrategyImplementation-0.10.2.jar')
    implementation files('libs/PolymorphiaProfessorStrategy-0.1.0.jar')

    implementation 'com.google.inject:guice:5.0.1'
    implementation 'org.springframework:spring-context:5.3.15'


    testImplementation platform('org.junit:junit-bom:5.10.0')
    testImplementation 'org.junit.jupiter:junit-jupiter'
    testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
    testImplementation 'org.junit.platform:junit-platform-suite:1.10.0'

    // BDD testing libraries
    testImplementation 'io.cucumber:cucumber-picocontainer:7.21.1'
    testImplementation 'io.cucumber:cucumber-java:7.21.1'
    testImplementation 'io.cucumber:cucumber-junit-platform-engine:7.21.1'
}

configurations {
    cucumberRuntime {
        extendsFrom testImplementation
    }
}

task cucumberCli() {
    println("REGISTER cucumberCli: This is executed during the configuration phase")
    dependsOn assemble, testClasses
    doLast {
        javaexec {
            main = "io.cucumber.core.cli.Main"
            classpath = configurations.cucumberRuntime + sourceSets.main.output + sourceSets.test.output
            args = [
                    '--plugin', 'pretty',
                    '--snippets', 'camelcase',
                    '--plugin', 'html:target/cucumber-report.html',
                    '--glue', 'com.billwright.stepdefs',
                    'src/test/resources/features']
        }
    }
}




